# claim-triage-system

./: .dockerignore  .env.example  .gitignore  DELIVERABLES_CHECKLIST.md  Dockerfile  Makefile  PROJECT_COMPLETION_SUMMARY.md  QUICKSTART.md  README.md  SETUP_COMPARISON.md  app.py  ci-policies.yml  docker-compose.yml  pyproject.toml  run_demo.sh  verify_deliverables.sh
.claude/: settings.local.json
data/: gold_labels.json  test_manifest.json
data/policy_docs/: appeals_process.txt  claims_processing_manual.txt  medical_necessity_guidelines.txt  network_coverage.txt  prior_authorization_policy.txt
data/test_cases/adversarial/: adv_policy_001_contradictory.txt  adv_policy_002_footnote.txt  adv_policy_003_fake_meta.txt  adv_policy_004_circular.txt  adv_policy_005_ambiguous.txt
scripts/: debug_decisions.py  generate_data_simple.py  generate_synthetic_data.py  generate_test_data.py  index_policies.py  index_policies_openai.py  run_regression_suite.py  simple_test.py  test_single_claim.py
services/agents/: __init__.py
services/agents/appeal_drafter/: __init__.py  appeal_drafter_agent.py
services/agents/citation_verifier/: __init__.py  citation_verifier_agent.py
services/agents/executor/: __init__.py  executor_agent.py
services/agents/extractor/: __init__.py  extractor_agent.py
services/agents/policy_reasoner/: __init__.py  policy_reasoner_agent.py
services/agents/retriever/: __init__.py  embedding_service.py  retriever_agent.py
services/human_review/: __init__.py  review_service.py
services/ingest/: __init__.py  pdf_parser.py
services/orchestrator/: __init__.py  workflow.py
services/shared/: __init__.py
services/shared/schemas/: __init__.py  appeal.py  audit.py  citation.py  claim.py  decision.py
services/shared/security/: __init__.py  encryption.py  hashing.py  phi.py
services/shared/utils/: __init__.py  config.py  logger.py
system_docs/: BUSINESS_CASE.md  MODEL_CARD.md  MONITORING_PLAYBOOK.md  SYSTEM_DOSSIER.md
tests/integration/: test_end_to_end_workflow.py
tests/unit/: test_citation_verifier.py  test_extractor_agent.py  test_retriever_agent.py
