[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claim-triage-system"
version = "0.1.0"
description = "Production-grade multi-agent system for healthcare claim triage and resolution"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Rishi", email = "rishi@example.com"}
]
keywords = ["healthcare", "claims", "AI", "multi-agent", "LangGraph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # API Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",

    # Agent Orchestration
    "langgraph>=0.2.50",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langsmith>=0.1.0",

    # LLM & Embeddings
    "openai>=1.54.0",
    "instructor>=1.6.0",

    # Vector Store & Database
    "chromadb>=0.5.0",
    "psycopg[binary]>=3.1.0",
    "pgvector>=0.3.0",

    # PDF Processing
    "pymupdf>=1.24.0",
    "pypdf>=3.17.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Caching & State
    "redis>=5.0.1",
    "hiredis>=2.3.0",

    # Security
    "cryptography>=42.0.0",
    "python-jose[cryptography]>=3.3.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",

    # Configuration
    "python-dotenv>=1.0.0",

    # Monitoring & Logging
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",

    # UI
    "streamlit>=1.40.0",

    # Utilities
    "httpx>=0.26.0",
    "aiofiles>=23.2.0",
    "tenacity>=8.2.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.98.0",
    "locust>=2.20.0",
    "ruff>=0.7.0",
    "black>=24.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipython>=8.20.0",
    "jupyterlab>=4.0.0",
]

[project.scripts]
claim-triage = "services.orchestrator.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["services*"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langgraph.*",
    "chromadb.*",
    "transformers.*",
    "sentence_transformers.*",
    "presidio_analyzer.*",
    "presidio_anonymizer.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=services --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "adversarial: marks tests as adversarial/red-team tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["services"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
